[package]
authors = ["Zeke Sonxx <zeke@zekesonxx.com>"]
name = "ps3bdtool"
version = "0.1.0"

[dependencies]
bytesize = "0.1.3"
clap = "2.29.1"
error-chain = "0.11.0"
flate2 = "1.0.1"
hex = "0.2.0"
nom = "3.2.1"
rust-crypto = "0.2.36"
time = "0.1.39"

[profile]

[profile.dev]
opt-level = 2

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[target."cfg(unix)".dependencies]
fuse = "0.3.1"
libc = "0.2.36"
xdg = "2.1.0"